@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  29 Sep 2006; Roy Marples <uberlord@gentoo.org>:
+
+    When changing runlevels and a config file exists for either the new
+    runlevel or the old one, we stop the service so that it will use the
+    new config file when we get around to re-starting services, #149182.
+
   28 Sep 2006; Roy Marples <uberlord@gentoo.org>:
 
     When we schedule a service to start by a service, also schedule it to
